versioned_docs/version-3.8/compatibility.mdx
---
tags:
  - Community
  - Enterprise
---

# ScalarDL Compatibility Matrix

This document shows the compatibility of ScalarDL Ledger and Auditor versions among ScalarDL Java Client SDK versions and ScalarDB Cluster.

:::note

Versions are expressed as `x.y.z`, where `x` represents the major version, `y` represents the minor version, and `z` represents the patch version. This format follows [Semantic Versioning](https://semver.org/).

:::

## ScalarDL compatibility with client SDKs

| ScalarDL Ledger/Auditor version | ScalarDL Java Client SDK version |
|:--------------------------------|:---------------------------------|
| 3.10                            | 3.8 - 3.10                       |
| 3.9                             | 3.8 - 3.9                        |
| 3.8                             | 3.8                              |

:::note

- You can consider the client tools, like commands as shown in the [getting started guide](./getting-started.mdx) and [ScalarDL Schema Loader](./schema-loader.mdx)) to be the same as the ScalarDL Java Client SDK. In other words, you can apply the same compatibility rules to client tools as the ScalarDL Java Client SDK.
- When you create a new deployment of ScalarDL, we recommend using the same version of ScalarDL Schema Loader as the version of ScalarDL.
- When you upgrade the minor or patch version of ScalarDL, basically, you don't need to update the existing schemas. In other words, basically, you don't need to re-run ScalarDL Schema Loader when you upgrade a minor or patch version of ScalarDL.
- If you use a new feature that ScalarDL provides in a new minor version, you may need to use the same or a later version of the client tools or re-create (or update) existing schemas. For details, please refer to the relevant documentation about each feature.

:::

### Version skew policy

- If the **major** versions are different between ScalarDL and the client SDK, they are **not** compatible and are **not** supported.
- If the **major** versions are the same and the **minor** versions are different between ScalarDL and the client SDK, the version of ScalarDL must be greater than or equal to the client SDK version. For example:
  - **Supported:** Combination of ScalarDL 3.9 and client SDK 3.8
  - **Not supported:** Combination of ScalarDL 3.8 and client SDK 3.9
- If the **major** versions and the **minor** versions are the same, you can use different **patch** versions between ScalarDL and the client SDK. For example:
  - **Supported:** Combination of ScalarDL 3.9.2 and client SDK 3.9.0
  - **Supported:** Combination of ScalarDL 3.9.0 and client SDK 3.9.2

## ScalarDL compatibility with ScalarDB Cluster

If you use ScalarDB Cluster with ScalarDL, you can use the following combinations of versions.

| ScalarDL version  | ScalarDB Cluster version                                      |
| :---------------- | :------------------------------------------------------------ |
| 3.9               | 3.12 or later minor (3.X) version (like 3.12, 3.13, and 3.14) |
| 3.8.2             | 3.12 or later minor (3.X) version (like 3.12, 3.13, and 3.14) |
| 3.8.0 - 3.8.1     | 3.8 or later minor (3.X) version (like 3.8, 3.9, and 3.10)    |
